style: fixed alignment of rustprop kofi button

--- a/styles/sass/partials/_rustprop.scss
+++ b/styles/sass/partials/_rustprop.scss
@@ -122,6 +122,10 @@ html.rustprop {
         .kofi-button {
             min-width: 100%;
             margin-top: 10px;
+
+            .kofitext {
+                padding-bottom: 5px;
+            }
         }
     }
 
@@ -185,8 +189,8 @@ html.rustprop {
                 padding: 0 8px;
             }
             .new-line {
-                    margin-top: 5px;
-                }
+                margin-top: 5px;
+            }
             a img {
                 height: 0.9rem;
                 margin-left: 10px;
